# VirtualMemoryManagerModule

./: .gitignore  CMakeLists.txt  readme.md  readme.txt
data/: config.txt
src/: AbstractProcess.cpp  AbstractProcess.h  CMakeLists.txt  ChildProcess.cpp  ChildProcess.h  ConfigParser.cpp  ConfigParser.h  PageAllocationProccess.cpp  PageAllocationServer.cpp  PageAllocationServer.h  PageSubstitutionServer.cpp  PageSubstitutionServer.h  ResourceManager.cpp  ResourceManager.h  ShutdownAll.cpp  ShutdownServer.cpp  ShutdownServer.h  StartAll.cpp  UserProcess.cpp  UserProcess.h  config.txt  defines.h  executeUserProcesses.cpp  initResources.cpp  jLock.cpp  jLock.h  jMessageQueue.cpp  jMessageQueue.h  jSharesMemory.cpp  jSharesMemory.h  lru.cpp  main._usuarios.cpp  main.cpp  main_servidoralocador.cpp  main_servidorsubstituidor.cpp  processo_usuario.cpp  shutdownAll.cpp  startPageAllocationServer.cpp  startPageSubstitutionServer.cpp  startUserProcess.cpp  (+2 more)
test/: CMakeLists.txt  config.txt  configParser_test.cpp  jLock_test.cpp  jMessageQueue_test.cpp  jSharedMemory_test.cpp  timestamp_test.cpp
