add_executable(startAll main.cpp UserProcess.cpp jMessageQueue.cpp ResourceManager.cpp ConfigParser.cpp jLock.cpp jSharesMemory.cpp AbstractProcess.cpp PageAllocationServer.cpp PageSubstitutionServer.cpp)
add_executable(startPageAlloc startPageAllocationServer.cpp jMessageQueue.cpp ResourceManager.cpp ConfigParser.cpp jLock.cpp jSharesMemory.cpp AbstractProcess.cpp PageAllocationServer.cpp PageSubstitutionServer.cpp)
add_executable(startPageSubst startPageSubstitutionServer.cpp jMessageQueue.cpp ResourceManager.cpp ConfigParser.cpp jLock.cpp jSharesMemory.cpp AbstractProcess.cpp PageAllocationServer.cpp PageSubstitutionServer.cpp)
add_executable(shutdownAll shutdownAll.cpp jMessageQueue.cpp ResourceManager.cpp ConfigParser.cpp jLock.cpp jSharesMemory.cpp AbstractProcess.cpp PageAllocationServer.cpp PageSubstitutionServer.cpp)
target_link_libraries(startAll -lrt -pthread)
target_link_libraries(startPageAlloc -lrt -pthread)
target_link_libraries(shutdownAll -lrt -pthread)
