add_executable(configParser_test configParser_test.cpp ../src/ConfigParser.cpp ../src/ConfigParser.h)
add_executable(timestamp_test timestamp_test.cpp)
add_executable(jLock_test jLock_test.cpp ../src/jLock.cpp)
add_executable(jMessageQueue_test jMessageQueue_test.cpp ../src/jMessageQueue.cpp)
add_executable(jSharedMemory_test jSharedMemory_test.cpp ../src/jSharesMemory.cpp)
